# node-tdlib

./: .eslintrc.json  .gitignore  .npmignore  CMakeLIsts.txt  CMakeLists.txt  README.md  bot_api.d.ts  bot_api.js  bot_api_base_types.ts  bot_api_types.d.ts  bot_api_types.ts  bot_types.d.ts  bot_types.js  botapi_types.d.ts  build_binary.js  download_prebuilt.js  extended_botapi_types.d.ts  index.d.ts  index.js  jsconfig.json  logger.js  package-lock.json  package.json  td.cpp  td_client_actor.d.ts  td_client_actor.js  td_doc_script.js  td_types.d.ts  tdlib.d.ts  tdlib.js  tdlib_types.d.ts  util.d.ts  util.js
